<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_edit_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                />

            <EditText
                android:id="@+id/sign_edit_pw"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                />


            <Button
                android:id="@+id/sign_btn_check"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/check"/>

            <Button
                android:id="@+id/sign_btn_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/cancel"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>