<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignInActivity"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/sign_im_profileImg"
                    android:layout_width="95dp"
                    android:layout_height="95dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="@drawable/profile"
                    android:maxHeight="100dp"
                    android:maxWidth="100dp"
                    android:src="@drawable/shape" />

                <Button
                    android:id="@+id/sign_btn_profileImg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|bottom"
                    android:background="@drawable/camera"
                    android:textSize="10dp" />

            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/sign_edit_id"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    />
                <Button
                    android:id="@+id/sign_btn_overlapId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overlap_check"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/sign_edit_nickname"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    />
                <Button
                    android:id="@+id/sign_btn_overlapNick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overlap_check"
                    />
            </LinearLayout>


            <EditText
                android:id="@+id/sign_edit_pw"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                />
            <EditText
                android:id="@+id/sign_edit_pw_check"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/pw_check"
                />

            <Button
                android:id="@+id/sign_btn_check"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/check"/>

            <Button
                android:id="@+id/sign_btn_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/cancel"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>