<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mypage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/colorPrimary"
        >

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mypage_btn_drawer"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="21dp"
                android:background="@drawable/menu"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="36dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/mypage"
                android:textSize="20sp" />

        </LinearLayout>-->
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/mypage_btn_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/mypage_im_profile"
            android:layout_width="87dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            />

        <Button
            android:id="@+id/mypage_im_camera"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|bottom"
            android:background="@drawable/camera"
            android:textSize="10dp"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/mypage_txt_nick"
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="name"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/mypage_txt_id"
        android:layout_marginTop="14dp"
        android:layout_width="126dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:background="@drawable/border_my_page"
        android:textSize="12dp"
        android:textColor="@color/white"
        android:text="id"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:background="@drawable/border_gray"
            android:layout_width="match_parent"
            android:layout_height="154dp">

            <ImageView
                android:id="@+id/mypage_im_award"
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:background="@color/gray2"
                android:scaleType="centerInside"
                android:src="@drawable/tro1"
                />

            <TextView
                android:id="@+id/mypage_txt_award_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/mypage_im_award"
                android:text="의자왕"
                android:textColor="@color/gray3"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/mypage_txt_award_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/mypage_txt_award_name"
                android:layout_below="@id/mypage_txt_award_name"
                android:layout_marginTop="6dp"
                android:text="바른자세 1000분"
                android:textColor="@color/gray4"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/mypage_btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mypage_txt_award_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="47dp"
                android:layout_toRightOf="@id/mypage_im_award"
                android:text="@string/share"
                android:textColor="@color/black2"
                android:textSize="14dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/mypage_btn_share"
                android:layout_marginLeft="7dp"
                android:layout_toRightOf="@id/mypage_btn_share"
                android:text="@string/badge"
                android:textColor="@color/orange"
                android:textSize="14dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/mypage_btn_profile"
            android:layout_width="match_parent"
            android:background="@drawable/border_gray"
            android:layout_height="52dp">

            <ImageView
                android:id="@+id/im_my"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="16dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_gray"
            android:id="@+id/mypage_btn_point"
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <ImageView
                android:id="@+id/im_point"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_list"
                android:textSize="16dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_gray"
            android:id="@+id/mypage_btn_setting"
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <ImageView
                android:id="@+id/im_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="16dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                />
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/border_gray"
            android:id="@+id/mypage_btn_logout"
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <ImageView
                android:id="@+id/im_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginLeft="24dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="16dp"
                android:layout_marginLeft="32dp"
                android:layout_gravity="center"
                android:layout_marginBottom="1dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>